--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.overayview">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -10,31 +14,41 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+
         <activity
-            android:name=".Splash"
-            android:theme="@style/Splash">
+            android:name=".activities.Splash"
+            android:theme="@style/Splash"></activity>
+        <activity android:name=".activities.AbeeMain"></activity>
+        <activity android:name=".Webview"></activity>
+        <activity android:name=".activities.LockActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AbeeMain" />
-        <activity android:name=".Webview" />
-        <activity android:name=".LockActivity" />
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".activities.MainActivity"></activity>
 
         <service
-            android:name=".MyService"
+            android:name=".service.MyService"
             android:enabled="true"
             android:permission="android.permission.SYSTEM_ALERT_WINDOW"
             android:theme="@android:style/Theme.Translucent" />
+
+        <service
+            android:name=".service.BackgroundService"
+            android:enabled="true" />
+
+        <service
+            android:name=".service.BackgroundService"
+            android:enabled="true"
+            android:stopWithTask="false" />
+
+        <receiver android:name=".receiver.BootReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
-
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-
 </manifest>
